Set Up Cross-Region Read Replicas for Scaling & Latency Optimization/arora-global-failover/vpc/primary.tf
# resource "aws_vpc" "primary" {
#   provider   = aws.primary
#   cidr_block = "10.0.0.0/16"
# }
# Add subnets and SGs...
