Set Up Cross-Region Read Replicas for Scaling & Latency Optimization/arora-global-failover/vpc/secondary.tf
resource "aws_vpc" "secondary" {
  provider   = aws.secondary
  cidr_block = "10.1.0.0/16"
}
# Add subnets and SGs...
